fix overflowing modal tabs

--- a/jsapp/scss/components/_kobo.modal.scss
+++ b/jsapp/scss/components/_kobo.modal.scss
@@ -73,7 +73,6 @@
 .modal__tabs {
   background: $cool-blue;
   color: #FFF;
-  margin: 0px -20px;
 }
 
 .modal__header {
